# rust

./: .gitignore  Cargo.toml  Codewars-8kyu-rust.ipynb
playground/: Cargo.toml
playground/src/: main.rs
sandbox/ip/: Cargo.toml
sandbox/ip/src/: main.rs
sandbox/stack/: Cargo.toml
sandbox/stack/src/: main.rs
sandbox/wiki/rs8_inp/: wiki1.rs8  wiki2.rs8  wiki3.rs8  wiki4.rs8  wiki5.rs8
sandbox/wiki/rs_inp/: wiki4.rs  wiki5.rs
so/: Cargo.toml
so/src/: main.rs
src/: hi.rs
src/codewars/: Cargo.toml  become_immortal.rs  brainluck_interpreter.rs  brainluck_interpreter_3.rs  format_duration.rs  last_digit.rs
src/codewars/src/: assembler_part2.rs  assembler_simple.rs  next_smaller_number.rs
src/codewars/src/1kyu/: interpreter.rs
src/codewars/src/kumite/: bool_to_word.rs
src/digidist/: Cargo.toml
src/exercism/factors/: factors.rs
src/exercism/nth-prime/src/: best_exe.rs  divide_and_conquer.rs  divide_and_conquer_submit.rs  generator.rs  heap.rs  lib.rs  naive.rs  recursive_mutex.rs  recursive_mutex_lazy_static.rs  recursive_mutex_once_cell.rs  recursive_unsafe.rs  struct.rs  struct_fp.rs
src/exercism/sieve/: sieve.rs
src/hackerrank/: Cargo.toml
src/hackerrank/algorithms/: quicksort-1.rs  quicksort-2.rs
src/hackerrank/src/: 0-hello-world.rs  10-binary-numbers.cases  10-binary-numbers.rs  11-2d-arrays.cases  11-2d-arrays.rs  2-operators.rs  20-sorting.cases  5-loops.rs  6-review-loop.rs  7-arrays.cases  8-maps.cases
src/hackerrank/src/30daysofcode/: 1-data-types.rs  20-sorting.rs  25-runningtime.rs  26-nestedlogic.rs  3-conditional-statements.rs  4-class-vs-instance.rs  6-review-loop.cases  7-arrays.rs  8-maps.rs  9-factorial.cases  9-factorial.rs
src/hackerrank/src/algorithms/: insertionsort-2.rs
src/hackerrank/src/euler/: 002-evenfibonacci.rs
src/hiwasm/: add1.rs  add1.wasm  index.html
src/rust/rust8/rs_inp/: wiki2.rs  wiki3.rs
