[package]
name = "rust"
version = "0.0.1"
authors = ["Aleksey Krasnobaev <alekseykrasnobaev@gmail.com>"]
edition = "2021"

[dependencies]
getopts = "0.2.21"
once_cell = "1.8.0"
lazy_static = "1.4.0"

[workspace]
members = ["src/codewars", "src/hackerrank", "playground", "so", "sandbox/stack"]
exclude = ["sandbox"]

[profile.release]
debug = true

[[bin]]
name = "hi"
path = "src/hi.rs"

## exercism ##

[[bin]]
name = "leap"
path = "src/exercism/leap/src/lib.rs"

[[bin]]
name = "raindrops"
path = "src/exercism/raindrops/src/lib.rs"

[[bin]]
name = "nprime"
path = "src/exercism/nth-prime/src/lib.rs"

## sandbox ##

[[bin]]
name = "stack"
path = "sandbox/stack/src/main.rs"
